--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,12 @@
   },
   "license": "GPL-2.0+",
   "require": {
-    "embed/embed": "~3.0"
+    "embed/embed": "dev-no-check-flickr"
+  },
+  "repository": {
+        {
+          "type": "vcs",
+          "url": "https://github.com/hisayan/Embed"
+        }
   }
 }
